# pychivalry

./: .flake8  .gitignore  .pre-commit-config.yaml  ASYNC_IMPLEMENTATION_GUIDE.md  ASYNC_THREADING_REPORT.md  CHANGELOG.md  CK3_FEATURES.md  CONTRIBUTING.md  DEVELOPMENT_PLAN.md  DOCUMENTATION_INDEX.md  FEATURE_MATRIX.md  FORMATTING_DIAGNOSTICS_PLAN.md  FUNCTION_SIGNATURES.md  GETTING_STARTED.md  IMPLEMENTATION_STATUS.md  INSTALL.md  LOCALIZATION_IMPLEMENTATION_SUMMARY.md  MANIFEST.in  PHASE_6.8_TEST_VALIDATION_REPORT.md  PYTHON_MODULES_DOCUMENTATION.md  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  SECURITY.md  TESTING.md  TODO.md  VSCODE_SETTINGS.md  expansion_pack_one.md  pyproject.toml
.github/: ISSUE_BODY_AFTER_BLOCK.md  README.md  copilot-instructions.md
Documentation/: 00_OVERVIEW.md  01_PARSER.md  02_SCOPES.md  03_LISTS.md  04_SCRIPT_VALUES.md  05_VARIABLES.md  ACTIVITIES_SCHEMA_PLAN.md  Activity_Template.md  README.md  SCHEMA_ONBOARDING_TEMPLATE.md  TESTING_GUIDE.md  TEST_IMPLEMENTATION_NOTES.md  Test Suites.md  ck3_content_types.md  dlc_story_cycle_analysis.md  feature_matrix.md
docs/: CK3_DEVELOPMENT_GUIDE.md  CODEBASE_OVERVIEW.md  MODULE_REFERENCE.md  PRE_COMMIT_SETUP.md  PRE_COMMIT_USAGE_GUIDE.md  SCHEMA_AUTHORING_GUIDE.md  THREADING.md
example mod/: README.md
examples/: descriptor.mod  example_event.txt  example_story_cycle.txt
plan docs/: LOG_WATCHER_USAGE.md  REQUIRED_FIELDS_VALIDATION.md  SERVER_REFACTORING_PLAN.md  STORY_CYCLES_SCHEMA_PLAN.md  TRAIT_VALIDATION_OPT_IN.md
prompts/: ascii_art_architecture_documentation.md
pychivalry/: __init__.py  ck3_language.py  code_actions.py  code_lens.py  completions.py  diagnostics.py  events.py  (+38 more)
(+268 files in other folders)
